# panel-rpglib

./: CONTRIBUTE.md  README.md  pyproject.toml
docs/: 01-design.md  02-implementation-plan.md  03-dev-env.md  character-module-impl-plan.md  character-module-object-model.md
src/arbrynnica/: __init__.py  character.py  condition.py  inventory.py  modifier.py  spell.py
src/arbrynnica/utils/: dice_roller.py
tests/: test_character.py  test_dice_roller.py
