[project]
name = "arbrynnica"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marsh Macy", email = "mmacy@users.noreply.github.com" }
]
dependencies = [
    "pytest>=8.2.1",
    "mypy>=1.10.0",
    "ruff>=0.4.5",
    "isort>=5.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arbrynnica"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"